doc: update velo set / get benchmark performance test  docs.